--- a/index.html
+++ b/index.html
@@ -47,6 +47,56 @@
   			<p id="image"><img src="images/19_03_2018_vigil_for_Mariam_Moustafa_Nottingham_UK.jpg"></p>
 		</div>
 	</div>
+	
+		<div class="section">
+		<p id="dividers">-</p>
+	</div>
+
+	<div class="section">
+	<button class="accordion">28_03_18_Hertz_Van_Hire_Russian_Embassy_Kensington_Palace_Gardens_London_UK.jpg</button>
+		<div class="panel">
+  			<p id="image"><img src="images/28_03_18_Hertz_Van_Hire_Russian_Embassy_Kensington_Palace_Gardens_London_UK.jpg"></p>
+		</div>
+	</div>
+
+	<div class="section">
+	<button class="accordion">28_03_18_Syrian_protest_Russian_Embassy_Bayswater_Road_London_UK.jpg</button>
+		<div class="panel">
+  			<p id="image"><img src="images/28_03_18_Syrian_protest_Russian_Embassy_Bayswater_Road_London_UK.jpg"></p>
+		</div>
+	</div>
+
+	<div class="section">
+	<button class="accordion">19_03_2018_vigil_for_Mariam_Moustafa_Nottingham_UK.jpg</button>
+		<div class="panel">
+  			<p id="image"><img src="images/19_03_2018_vigil_for_Mariam_Moustafa_Nottingham_UK.jpg"></p>
+		</div>
+	</div>
+	
+		<div class="section">
+		<p id="dividers">-</p>
+	</div>
+
+	<div class="section">
+	<button class="accordion">28_03_18_Hertz_Van_Hire_Russian_Embassy_Kensington_Palace_Gardens_London_UK.jpg</button>
+		<div class="panel">
+  			<p id="image"><img src="images/28_03_18_Hertz_Van_Hire_Russian_Embassy_Kensington_Palace_Gardens_London_UK.jpg"></p>
+		</div>
+	</div>
+
+	<div class="section">
+	<button class="accordion">28_03_18_Syrian_protest_Russian_Embassy_Bayswater_Road_London_UK.jpg</button>
+		<div class="panel">
+  			<p id="image"><img src="images/28_03_18_Syrian_protest_Russian_Embassy_Bayswater_Road_London_UK.jpg"></p>
+		</div>
+	</div>
+
+	<div class="section">
+	<button class="accordion">19_03_2018_vigil_for_Mariam_Moustafa_Nottingham_UK.jpg</button>
+		<div class="panel">
+  			<p id="image"><img src="images/19_03_2018_vigil_for_Mariam_Moustafa_Nottingham_UK.jpg"></p>
+		</div>
+	</div>
 
 	<div class="section">
 		<p id="dividers">-</p>
