--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-	<title>The Reconnoiterer's Fix</title>
+	<title>The Reconnoiterer's Assistance</title>
 
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 
@@ -20,7 +20,7 @@
 	</div>
 
 	<div class="section">
-		<p id="dividers">The Reconnoiterer's Fix</p>
+		<p id="dividers">The Reconnoiterer's Assistance</p>
 	</div>
 
 	<div class="section">
