--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</div>
 
 	<div class="section">
-		<p id="dividers">The Reconnoiterer's Assistance</p>
+		<p id="dividers">The RECONNOITERER'S ASSISTANCE</p>
 	</div>
 
 	<div class="section">
