--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 <body>
 <div id="wrapper">
 	<div class="section">
-		<p id="dividers">-</p>
-	</div>
-	<div class="section">
 		<p id="dividers">The RECONNOITERER'S ASSISTANCE</p>
 	</div>
 	<div class="section">
-		<p id="dividers">-</p>
+		<p id="dividers">.</p>
 	</div>
 
 	<div class="section">
@@ -88,16 +85,11 @@
 	</div>
 
 	<div class="section">
-		<p id="dividers">-</p>
+		<p id="dividers">.</p>
 	</div>
 
 	<div class="section">
 		<p id="dividers">Images &copy; Jez Noond 2018</p>
-	</div>
-
-
-	<div class="section">
-		<p id="dividers">-</p>
 	</div>
 
 </div>
