--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div id="wrapper">
 	<div class="section">
-		<p id="dividers">The RECONNOITERER'S ASSISTANCE</p>
+		<p id="dividers">THE RECONNOITERER'S ASSISTANCE</p>
 		<p id="dividers">.</p>
 	</div>
 
