--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Reconnoiterer's Assistance</title>
+	<title>The Reconnoiterer's Remedial</title>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 <body>
 <div id="wrapper">
 	<div class="section">
-		<p id="dividers">THE RECONNOITERER'S ASSISTANCE</p>
+		<p id="dividers">THE RECONNOITERER'S REMEDIAL</p>
 		<p id="dividers">.</p>
 	</div>
 
