--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <div id="wrapper">
 	<div class="section">
 		<p id="dividers"></p>
+	</div>
+	<div class="section">
+		<p id="dividers"></p>
 		<p id="dividers">THE RECONNOITERER'S DRIFT</p>
 		<p id="dividers">.</p>
 	</div>
