--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>TRS: APRIL 2018</title>
+<title>THE RECONNOITERER'S SYMPTOM: APRIL 2018</title>
 
 <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 
