--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@
 	<div class="section">
 		<button class="accordion">28.04.18 - Bench and dishes, North West London, England.</button>
 			<div class="panel">
-  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_18_0021.jpg"></p>
+  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_18_0021.JPG"></p>
 			</div>
 	</div>
 
 	<div class="section">
 		<button class="accordion">28.04.18 - Railway and Alexandra Estate (back), North West London, England.</button>
 			<div class="panel">
-  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_28_0047.jpg"></p>
+  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_28_0047.JPG"></p>
 			</div>
 	</div>
 
 	<div class="section">
 		<button class="accordion">28.04.18 - Awnings, Alexandra Estate, North West London, England.</button>
 			<div class="panel">
-  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_18_0121.jpg"></p>
+  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_18_0121.JPG"></p>
 			</div>
 	</div>
 
@@ -156,7 +156,7 @@
 	<div class="section">
 		<button class="accordion">28.04.18 - 'COAL OFFICE' and 'Tom Dixon Shop Now Open', University of the Arts, London, England.</button>
 			<div class="panel">
-  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_18_0591.jpg"></p>
+  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_18_0591.JPG"></p>
 			</div>
 	</div>
 
@@ -170,7 +170,7 @@
 	<div class="section">
 		<button class="accordion">28.04.18 - Child in vintage car, University of the Arts, London, England.</button>
 			<div class="panel">
-  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_18_0568.jpg"></p>
+  				<p id="image"><img src="images/TRS_LONDON_ENGLAND_28_04_18_0568.JPG"></p>
 			</div>
 	</div>
 
