--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 		<button class="accordion"><p id="info">THE RECONNOITERER'S SYMPTOM</p></button>
 			<div class="panel">
 
-<p id="text">Welcome the April's TRS. This month's image sequence is entitled 'Our Ground'.</p>
+<p id="text">Welcome to April's TRS. This month's image sequence is entitled 'Our Ground'.</p>
 <p id="text">The idea for TRS is to avoid the portfolio approach to photography and create, instead, a monthly repository of new images that somehow capture the excitement of getting out and about with a camera. TRS is a place of change not stasis or the weight of 'previous work'. Sometimes it's about being somewhere and pressing the shutter rather than the image itself.</p>
-<p id="text">I aim for a dozen or so images each month for year to see how this feels, images that reflect a commitment to walking and looking, a kind of low level reconnaissance or mass observation strategy.</p>
+<p id="text">I aim for a dozen or so images each month for year to see how this feels, images that reflect a commitment to walking and looking, a kind of low-level reconnaissance or mass-observation strategy.</p>
 <p id="text">Social media platforms are too noisy for a quieter approach to image sequencing and the TRS repositories are an attempt to break free. No frills image and text. Black and white in form. Nuanced in intention.</p>
 <p id="text">I'm hoping to invite some temporary exhibitions too (at some point), photos and observation strategies by other people, each exhibition a month long like the repositories themselves.</p>
-<p id="text">A quick word about navigating the images. I want the sequences on TRS to echo the flexibility offered by the humble picture book where, even though there is a 'set sequence', it's possible for the viewer to explore images in relation to each other by leafing back and forth. Here, clicking a link will scroll out the related image. Clicking the link again will scroll it back. Use the scroll bar at the right of your browser to move up and down through the sequence. It's possible to open and close the images in any order or view them all together.</p>
+<p id="text">A quick word about navigating the images. I want the sequences on TRS to echo the flexibility offered by the humble picture book where, even though there is a 'set sequence', it's possible for the viewer to explore images in relation to each other by leafing back and forth. Here, clicking a link will scroll open the related image. Clicking the link again will scroll it closed. Use the scroll bar down the side of your browser to move up and down through the sequence. It's possible to open and close the images in any order or view them all together.</p>
 <p id="text">Hope you enjoy 'Our Ground'.</p>
-<p id="text">Jez Noond</p>
+<p id="text">Jez</p>
 <p id="text">April, 2018</p>
 
 			</div>
@@ -182,7 +182,7 @@
 	</div>
 
 	<div class="section">
-		<p id="info">IMAGES &copy; Jez Noond 2018</p>
+		<p id="info">IMAGES &copy; Jez Noond 2018 jeznoond@hotmail.com</p>
 	</div>
 </div>
 
