--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <p id="text">Hope you enjoy 'Our Ground'.</p>
 <p id="text">Jez</p>
 <p id="text">April, 2018</p>
+<p id="text">jeznoond@hotmail.com</p>
 
 			</div>
 
@@ -182,7 +183,7 @@
 	</div>
 
 	<div class="section">
-		<p id="info">IMAGES &copy; Jez Noond 2018 jeznoond@hotmail.com</p>
+		<p id="info">IMAGES &copy; Jez Noond 2018</p>
 	</div>
 </div>
 
